--- a/web/private/.htaccess
+++ b/web/private/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Restricted access"
-AuthUserFile "/haukai-restaurant/.htpasswd"
+AuthUserFile "/app/.htpasswd"
 Require valid-user
